ensure message not overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -53,7 +53,7 @@ h1 {
 
 button {
     padding: 10px 20px;
-    margin: 5px;
+    margin: 25px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 10px;
@@ -63,4 +63,8 @@ p span {
     max-height: 100px;                             
     display: block;                 
     word-wrap: break-word;
+}
+
+.message{
+    overflow: scroll;
 }
